cmake_minimum_required(VERSION 3.25)
project(comp2012)

set(CMAKE_CXX_STANDARD 11)

#add_executable(playground playground.cpp)
#add_executable(main Lab/Lab1/main.cpp Lab/Lab1/student.cpp Lab/Lab1/studentlist.cpp)
#add_executable(person Review/person_family/person.cpp Review/person_family/family.cpp)
#add_executable(const_object_date Review/constant_object/cosnt_object_date.cpp)
add_executable(lab2 Lab/Lab2/library.cpp Lab/Lab2/main.cpp)
